reduce use of guava